--- a/vignettes/seewave_analysis.rnw
+++ b/vignettes/seewave_analysis.rnw
@@ -92,9 +92,11 @@ This document is a very brief introduction to sound analysis principles. It is m
 
 \subsection{Sampling}
 
+%% ADD ALIASING, NYQUIST-SHANNON SAMPLING THEOREM
+
 Digital recording is not a continuous but a discrete process of data acquisition. Sound is recorded through regular samples. These samples are taken at a specified rate, named the sampling frequency or sampling rate $f$ given in Hz or kHz. The most common rate is 44,100 Hz = 44.1 kHz but lower rate can be used for low frequency sound (\textit{e.g.} 22.05 kHz) or higher rate can be used for high frequency sound (up to 192 kHz).\par
 
-Figure \ref{fig:sampling} show 5 ms of pure tone sound (440 Hz) sampled at 44.1 kHz and 22.05 kHz respectively. The discretization of sound digitization should not be underestimated as a too low sampling rate can lead to frequency artefacts.
+Figure \ref{fig:sampling} shows 5 ms of a pure tone sound (440 Hz) sampled at 44.1 kHz and 22.05 kHz respectively. The discretization of sound digitization should not be underestimated as a too low sampling rate can lead to frequency artefacts.
 
 \begin{figure}
 \centering
@@ -110,7 +112,7 @@ oscillo(s.11kHz, type="o", tlab="", alab="", cex=0.5)
 mtext("Time (s)", side=1, out=TRUE, at=0.55, line=-1)
 mtext("Amplitude", side=2, out=TRUE, line=-2, at=0.5)
 @
-\caption{\label{fig:sampling} Digital sound is a discrete process along a time scale: the same sound sampled at two different rates: 44.1 kHz (above) and 11.025 kHz (bottom) respectively.}
+\caption{\label{fig:sampling} Digital sound is a discrete process along a time scale: the same sound sampled at two different rates: 44.1 kHz (above) and 22.05 kHz (bottom) respectively.}
 \end{figure}
 
 \subsection{Quantisation}
@@ -228,7 +230,7 @@ oscillo(s)
 \begin{figure}
 \centering
 <<s-decomposed, fig=TRUE, echo=FALSE, return=hide>>=
-layout(matrix(1:3, nr=3), height=c(1,0.8,1.2))
+op <- layout(matrix(1:3, nr=3), height=c(1,0.8,1.2))
 par(mar=c(0,4,1,1), oma=c(1,0,0,0))
 oscillo(s1, labels=FALSE,xaxt="n", bty="o")
 legend("topright", legend="1 kHz", bty="n", bg="white", cex=3, text.col=2)
@@ -240,7 +242,7 @@ oscillo(s3, labels=FALSE, bty="o")
 legend("topright", legend="3 kHz", bty="n", bg="white", cex=3, text.col=2)
 mtext("Time (s)", side=1, out=TRUE, at=0.55, line=-1)
 mtext("Amplitude", side=2, out=TRUE, line=-2, at=0.5)
-invisible(dev.off())
+par(op)
 @
 \caption{\label{fig:s-decomposed} Decomposition of the time wave $s$ into three sine functions. See figure \ref{fig:s}.}
 \end{figure}
@@ -413,7 +415,9 @@ These components can be used to plot the spectrogram manually (Figure \ref{fig:s
 \begin{figure}
    \centering
 <<spectro-components, echo=FALSE, fig=TRUE>>=
+op <- par(mar=rep(1,4))
 filled.contour(x=spectro$time, y=spectro$freq, z=t(spectro$amp))
+par(op)
 @
 \caption{Redrawing the graphical output of the function \texttt{spectro()} with the native \texttt{filled.contour()} function, with the command: \texttt{filled.contour(x=spectro[[1]], y=spectro[[2]], z=t(spectro[[3]]))}.}
 \label{fig:spectro-components}
