--- a/NEWS
+++ b/NEWS
@@ -2,12 +2,30 @@
 		*		SEEWAVE NEWS		*
 		*****************************************
 
+		CHANGES IN SEEWAVE VERSION 1.7.6 [09-September-2014]
+
+NEW FEATURES
+        o acoustat(): two new arguments, 'tlim' and 'flim' to control the time and frequency limits of the analysis.
+	o akamatsu(): a new function to compute the resonance and cut frequency in water taks. By Camille Desjonqueres.
+	o diffcumspec(): a new function to compute dissimilarity between two spectra based on the cumulative distribution functions. By Laurent Lellouch.
+	o fund(): a new argument, 'at', to estimate the fundamental frequency at a specific position along the wave object.
+	o istft(): a new function to compute the inverse of the short-term Fourier transform (ISTFT). Translated and adapted from a Matlab function written by Hristo Zhivomirov.
+        o songmeter(): a new function to read and decompose the file name produced by a SongMeter (Wildlife Acoustics (c)).
+	o spectro(): a new argument 'complex' to get the complex values of the STFT when plot is FALSE.
+        o synth(): two new arguments 'signal' to control the signal function and 'partials' to produce harmonics. By Laurent Lellouch.
+
+OTHER CHANGES
+        o ffilter(), lfs(): the quality of the results have been greatly improved. A new argument 'ovlp' for setting the overlap between successive FFT windows.
+	o spec(): a small bug regarding the x axis when using 'from' an 'to' arguments, thanks to Arvind Sowmyan.
+	o wav2falc(): a patch by Luis Villanueva-Rivera to fix .exe path issues
+      
+
 		CHANGES IN SEEWAVE VERSION 1.7.3 [27-January-2014]
 
 NEW FEATURES
 	o acoustat(): a new function to obtain statistics on the time and frequency contours of the short-term Fourier transform, following the principles described by Fristrup and Watkins (1992). Checked by K. Fristrup.
-	o NDSI(): a new function to obtain a Symbolic Aggregate approXimation of a numeric vector as described in Lin et al. (2003). Checked by E. Kasten.
-	o SAX(): a new function to compute the Normalized Difference Soundscape Index as described in Kasten et al. (2003). Checked by E. Kasten.
+	o SAX(): a new function to obtain a Symbolic Aggregate approXimation of a numeric vector as described in Lin et al. (2003). Checked by E. Kasten.
+	o NDSI(): a new function to compute the Normalized Difference Soundscape Index as described in Kasten et al. (2003). Checked by E. Kasten.
 	o soundscapespec(): a new function to compute a frequency spectrum according to soundscape description as described in Kasten et al. (2012). Checked by E. Kasten.
 	o TKEO(): a new function to compute the Teager-Kaiser Energy Operator.
 	o zcr(): a new function to compute the zero-crossing rate.
