--- a/NEWS
+++ b/NEWS
@@ -2,11 +2,53 @@
 		*		SEEWAVE NEWS		*
 		*****************************************
 
+
+		CHANGES IN SEEWAVE VERSION 2.0.1 [08-July-2015]
+
+NEW FUNCTIONS
+        o AR(): a new function to compute the Acoustic Richness index (contribution of M. Depraetere)
+        o combfilter(): a new function to apply a frequency comb filter.
+        o drawfilter(): a new function to draw interactively the frequency response of a filter (by Laurent Lellouch).
+        o M(): a new function to compute the Acoustic Richness index (contribution of M. Depraetere)
+        o squarefilter(): a new function to generate the frequency response of a square filter (by Laurent Lellouch).
+
+NEW ARGUMENTS
+        o corspec(), cutspec(), diffspec(), diffcumspec(), fbands(), fpeaks(), ks.dist(), localpeaks(), Q(), simspec(), specprop(): a new argument 'mel' to deal with (htk-)mel scale. By Laurent Lellouch.
+        o diffspec(), simspec(): a new argument 'title'.
+	o discrets(): a new argument 'plateau' to control how a plateau is encoded. By Laurent Lellouch.
+	o env(): a new argument 'fftw' to speed up the computation of the Hilbert amplitude envelope and/or kernell smoothin through the use of the package fftw. By Jean Marchal and Francois Fabianek.
+	o hilbert(): a new argument 'fftw' to speed up the computation of the Hilbert transform through the use of the package fftw. By Jean Marchal and Francois Fabianek.
+        o itakura.dist(), logspec.dist(): a new argument 'scale' to ensure that the distances are not influenced by the length of the spectra to be compared. By Laurent Lellouch.
+	o oscillo(): a new argument 'nidentify' to control the number of identified points on the wave.
+        o simspec(): two new arguments, 'norm' and 'PMF', to scale the spectra between 0 and 1 or transform them into probability mass functions.
+	o timer(): a new argument 'dmin' to detect signal events above a minimum duration (time threshold).
+
+OTHER CHANGES
+	o The dependency with fftw is removed. This should facilitate installation on different OSs.
+	o seewave now imports the base packages graphics, grDevices, stats, utils to comply with new packages check rules.
+        o cutspec(): a small frequency shift fixed.
+	o diffspec(): the arguments 'lty1', 'lty2' and 'lty3' have been merged into a single argument 'lty'; the arguments 'col1', 'col2' and 'cold' have been merged into a single argument 'col'.
+	o ks.dist(): the distance 'D' can now be computed even if the sampling frequency is not provided. By Laurent Lellouch.
+        o listen(): a bug regarding audioSample objects fixed.
+        o oscillo(): a bug regarding title fixed. 
+	o oscilloST(): now manages stereo objects of class Wave or audioSample.
+	o pulse() is renamed pulsew() to avoid confusion with tuneR::pulse.
+	o Q(): is now faster. By Laurent Lellouch.
+	o 'rev.cm.colors()', 'rev.gray.colors.1()', 'rev.gray.colors.2()', 'rev.heat.colors()', 'rev.terrain.colors()', 'rev.topo.colors()' have been renamed 'reverse.cm.colors()', 'reverse.gray.colors.1()', 'reverse.gray.colors.2()', 'reverse.heat.colors()', 'reverse.terrain.colors()', 'reverse.topo.colors()' respectively to comply with new packages check rules.
+	o sh(): a new option 'simpson' for the argument 'alpha' to compute the Simpson (or Gini-Simpson) entropy (index). The Renyi entropy was also modified to obtain values between 0 and 1. By Laurent Lellouch.
+	o simspec(): the arguments 'lty1', 'lty2' and 'lty3' have been merged in to a single argument 'lty'; the arguments 'col1', 'col2' and 'col3' have been merged in to a single argument 'col'.
+	o synth(): the length of the arguments 'am' and 'fm' increase to 3 and 4 respectively to add a phase component. By Laurent Lellouch.
+	o timer(): a bug regarding the argument 'tlim' fixed, a new value 'first' that specifies whether the first event detected is a signal or a pause.
+
+DEPRECATED & DEFUNCT
+	o diffspec(): the argument 'dB' is removed has the 'dB' results are not optimal.
+
+
 		CHANGES IN SEEWAVE VERSION 1.7.6 [09-September-2014]
 
 NEW FEATURES
         o acoustat(): two new arguments, 'tlim' and 'flim' to control the time and frequency limits of the analysis.
-	o akamatsu(): a new function to compute the resonance and cut frequency in water taks. By Camille Desjonqueres.
+	o akamatsu(): a new function to compute the resonance and cut frequency in water tanks. By Camille Desjonqueres.
 	o diffcumspec(): a new function to compute dissimilarity between two spectra based on the cumulative distribution functions. By Laurent Lellouch.
 	o fund(): a new argument, 'at', to estimate the fundamental frequency at a specific position along the wave object.
 	o istft(): a new function to compute the inverse of the short-term Fourier transform (ISTFT). Translated and adapted from a Matlab function written by Hristo Zhivomirov.
@@ -17,7 +59,7 @@ NEW FEATURES
 OTHER CHANGES
         o ffilter(), lfs(): the quality of the results have been greatly improved. A new argument 'ovlp' for setting the overlap between successive FFT windows.
 	o spec(): a small bug regarding the x axis when using 'from' an 'to' arguments, thanks to Arvind Sowmyan.
-	o wav2falc(): a patch by Luis Villanueva-Rivera to fix .exe path issues
+	o wav2flac(): a patch by Luis Villanueva-Rivera to fix .exe path issues
       
 
 		CHANGES IN SEEWAVE VERSION 1.7.3 [27-January-2014]
@@ -524,7 +566,7 @@ BUG FIXES
 
 
 BUG FIXES
-	o dB scale(): the scale can be now plotted horizontally.
+	o dBscale(): the scale can be now plotted horizontally.
 	o oscillo(): the argument "labels" has been added, outer margins modified to fit with bmp(),png() and jpeg().
 	o spectro(): oscillogram left aligned with spectrogram.
 
